fix stretched images: add height:auto now that imgs have dimension attrs

--- a/scss/_casestudy.scss
+++ b/scss/_casestudy.scss
@@ -32,6 +32,7 @@
 
         img {
             width: 100%;
+            height: auto;
             border: 1px solid v.$med-grey;
             border-radius: 0 !important;
             box-shadow: 1px 1px 10px v.$light-grey;
@@ -49,6 +50,7 @@
 
         img {
             width: 100%;
+            height: auto;
             border: 1px solid v.$med-grey;
         }
     }
